# rust-verkle-wrapper

./: .gitignore  Cargo.toml  Makefile  README.md  create_directoy.sh  osxcross_setup.sh  setup.sh
.cargo/: config
.github/workflows/: cross-compile.yml  rust.yml
src/: disk_db.rs  lib.rs  main.rs  memory_db.rs  readonly_disk_db.rs
src/verkle_variants/: db.rs  memory_prelagrange.rs  memory_test.rs  mod.rs  rocksdb_prelagrange.rs  rocksdb_test.rs  traits.rs  trie.rs
tests/: db_trie_test.rs  trie_test.rs
