[package]
name = "rust_verkle_wrapper"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="rust_verkle"
crate-type = ["cdylib", "rlib"]
test = true


[dependencies]
verkle-trie = { git = "https://github.com/tanishqjasoria/rust-verkle" , branch = "stable"}
verkle-db = { git = "https://github.com/tanishqjasoria/rust-verkle", features = ["rocks_db"], branch = "stable"}
tempfile = "3.2.0"
bandersnatch = "0.1.1"
ark-ff = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-serialize = { version = "^0.3.0", default-features = false }
once_cell = "1.8.0"
hex = "0.4.3"
rand_chacha = { version = "0.3.0", default-features = false }
rayon = "1.5.1"
smallvec = "1.6.1"
criterion = "0.3.4"
sha2 = "0.9.3"
itertools = "0.10.1"

[dev-dependencies]
serial_test = "*"
tempfile = "3.3.0"